--- a/vercel.json
+++ b/vercel.json
@@ -4,11 +4,8 @@
     "builds": [
       {
         "src": "webserver.py",
-        "use": "@vercel/python"
-      },
-      {
-        "src": "static/**",
-        "use": "@vercel/static"
+        "use": "@vercel/python",
+        "config": { "maxLambdaSize": "15mb", "runtime": "python3.8" }
       }
     ],
     "routes": [
