--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       {
         "src": "webserver.py",
         "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.8" }
+        "config": { "runtime": "python3.8" }
       }
     ],
     "routes": [
